src/content/docs/zh/sdk/react-native/v4/index.mdx
---
title: "React Native SDK 集成指南"
description: "使用 React Native SDK 在 React Native 应用中使用 Adjust 功能"
category-title: "React Native SDK"
slug: "en/sdk/react-native/v4"
sidebar-position: 4
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/react-native"
---
通过 Adjust React Native SDK，您可以在自己的 React Native 应用中监测归因、事件及更多数据。请按照本指南中说明的步骤操作，在应用内设置 Adjust SDK。您还可以在 [GitHub](https://github.com/adjust/react_native_sdk/tree/master/example) 上查看示例应用。
<callout type="important"> 

Adjust SDK 支持 iOS 9 或更新版本，以及安卓 API 级别 9 \(Gingerbread\) 或更新版本。
</Callout> 

1\. 添加 SDK 至您的项目\{\#add\-the\-sdk\-to\-your\-project\}
---------------------------------------------------------------

要在您的 React Native 应用中使用 Adjust SDK，请先将 SDK 加入项目。请按以下步骤添加：

1. 使用以下方法之一下载 React Native 库。

<tabs> <tab title="NPM"> 

在您的终端运行以下指令：

```console
$ npm install react-native-adjust@$REACT_NATIVE_V4_VERSION --save
```

</Tab> <tab title="Github"> 

您可以从 Adjust 的 React Native SDK[GitHub 发布页面](https://github.com/adjust/react_native_sdk/releases/latest)下载最新版本的 SDK。
</Tab> </Tabs> 

2. 在您的终端运行以下指令来为您的 iOS 应用安装 CocoaPods 依赖：

```console
$ cd ios && pod install
```

2\. 集成 SDK\{\#integrate\-the\-sdk\}
-----------------------------------------

要将 SDK 集成进项目，您必须先将 Adjust 的 SDK 配置导入主要应用 Javascript 文件。

在应用的`.js`文件开始处加入以下行：

```js
import { Adjust, AdjustEvent, AdjustConfig } from "react-native-adjust";
```

3\. 初始化 Adjust SDK\{\#initialize\-the\-adjust\-sdk\}
-----------------------------------------------------------

请确保在 React Native 应用中尽快初始化 Adjust SDK。要进行 SDK 初始化，请使用应用识别码及您希望应用程序运行的环境来初始化 config 对象。 向应用的`.js`文件中加入以下代码行：

```js
constructor(props) {
   super(props);
   const adjustConfig = new AdjustConfig("{YourAppToken}", AdjustConfig.EnvironmentSandbox);
   Adjust.create(adjustConfig);
}

componentWillUnmount() {
   Adjust.componentWillUnmount();
}
```

传递`AdjustConfig`参数：

* 用您的识别码替换 `{YourAppToken}` 。请查看[应用设置](https://help.adjust.com/en/article/app-settings#view-your-app-token)，了解查找识别码的办法。
* 选择您的环境： 
  * 如要测试应用并发送测试数据，请使用`AdjustConfig.EnvironmentSandbox`。请在控制面板中启用 [sandbox 模式](https://help.adjust.com/en/article/filter-data#sandbox)，查看测试数据。
  * 如果您已经完成测试，准备发布应用，请使用`AdjustConfig.EnvironmentProduction`。

<callout type="important"> 

在进行测试时，请确保将环境设置为 `AdjustEnvironment.sandbox`。请在向应用商店提交应用前将此设为 `AdjustEnvironment.production`。
</Callout> 

4\. 设置安卓设备\{\#set\-up\-android\-devices\}
------------------------------------------------

### 添加权限\{\#add\-permissions\}

Adjust SDK 需要特定权限来访问信息。\(如尚未添加\) 请将其添加至您的 `AndroidManifest.xml` 文件中：
<codeblock title="AndroidManifest.xml"> 

```xml
<uses-permission android:name="android.permission.INTERNET" id="sl-md0000000"/>
<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" id="sl-md0000000"/>

```

</CodeBlock> 

从 Adjust SDK 4\.32\.0 及以上版本默认包含 `com.google.android.gms.AD_ID` 权限。如果您的应用需要符合 COPPA 的要求或不针对 Google Play 商店，则可以通过添加 `remove` 指令将其删除。
<codeblock title="AndroidManifest.xml"> 

```xml
<uses-permission android:name="com.google.android.gms.permission.AD_ID" id="sl-md0000000"/>
```

</CodeBlock> <callout type="seealso"> 

请查看 [Google 的 `AdvertisingIdClient.Info`](https://developers.google.com/android/reference/com/google/android/gms/ads/identifier/AdvertisingIdClient.Info#public-string-getid) 文档，了解更多与该许可相关的信息。
</Callout> 

### 添加 Google Play 服务\{\#add\-google\-play\-services\}

定向 Google Play 商店的应用必须使用 [Google 广告 ID](https://support.google.com/googleplay/android-developer/answer/6048248?hl=en) \(`gps_adid`\) 来识别设备。为此，请将以下 dependency 加入`build.gradle` 文件的 `dependencies` 部分。
<codeblock title="build.gradle"> 

```groovy
implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
```

</CodeBlock> <callout type="note"> 

Adjust SDK 并不与任何版本的 `play-services-ads-identifier`依赖绑定。您可以使用任意版本的 Google Play 服务库。
</Callout> 

### 设置 Proguard\{\#set\-up\-proguard\}

如果您使用的是 Proguard，请将以下规则添加至您的 Proguard 文件。
<codeblock title="proguard.pro"> 

```java
-keep class com.adjust.sdk.** { *; }
-keep class com.google.android.gms.common.ConnectionResult {
   int SUCCESS;
}
-keep class com.google.android.gms.ads.identifier.AdvertisingIdClient {
   com.google.android.gms.ads.identifier.AdvertisingIdClient$Info getAdvertisingIdInfo(android.content.Context);
}
-keep class com.google.android.gms.ads.identifier.AdvertisingIdClient$Info {
   java.lang.String getId();
   boolean isLimitAdTrackingEnabled();
}
-keep public class com.android.installreferrer.** { *; }

```

</CodeBlock> 

### 设置 Install Referrer\{\#set\-up\-install\-referrer\}

Install Referrer 是一种归因机制，可用来将应用安装归因至来源。包含两部分：

* [x]  来自这些应用商店的一系列 API，开发者借此可在应用中调取 referral 内容。
* [x]  Google Play 和华为 App Gallery 等应用商店在其商店网站应用页面 URL 中接受的 `referrer` 参数。referrer 参数按以下方式填充： 
  * 用户点击 Adjust 链接时，Adjust 服务器发送一个独一无二的识别码，即 `reftag`。该识别码被指配给此点击，并被添加至 referrer 参数。要进一步了解 reftag，请访问[Reftag](https://help.adjust.com/en/article/reftag) 页面。
  * 您在开展 [Google Ads](https://support.google.com/google-ads/answer/6357635?hl=en) 推广活动时，Google 会传递一个叫做 `gclid` 的唯一识别码至 referrer 参数。您必须在 Google Ads 账户中开启 **Auto\-tagging** 。

<callout type="note"> 

虽然 install referrer 不是必要的，但我们强烈建议添加以提高归因准确度。
</Callout> 

#### Google Play Referrer API\{\#google\-play\-referrer\-api\}

<minorversion added="v4.12.0"> 

要支持 [Google Play Referrer API](https://developer.android.com/google/play/installreferrer)：
</MinorVersion> 

1. 请在您的最高层级`build.gradle`文件的 **依赖区块** 中添加以下行：

<codeblock title="build.gradle"> 

```groovy
dependencies {
//...
implementation 'com.android.installreferrer:installreferrer:2.2'
//...
}

```

</CodeBlock> 

2. `installreferrer`库是 **Google Maven** 库的一部分。您需要将 Google Maven 库添加到应用的最高层级`build.gradle`文件来构建应用：

<codeblock title="build.gradle"> 

```groovy
allprojects {
   repositories {
      maven {
         url "https://maven.google.com"
      }
   }
}


```

</CodeBlock> 

3. 如果您使用的是 Proguard，请务必将下列设置加入您的 Proguard 文件：

<codeblock title="proguard.pro"> 

```java
-keep public class com.android.installreferrer.** { *; }
```

</CodeBlock> 

#### 华为 Referrer API\{\#huawei\-referrer\-api\}

从版本 v4\.22\.0 开始，Adjust SDK 将支持对装有华为 App Gallery 10\.4 或更新版本的设备进行安装监测。您无需其他调整和变更，就可以开始使用华为 Referrer API。

#### Meta referrer 集成\{\#meta\-referrer\-integration\}

<callout type="note"> 

Adjust SDK 会捆绑[Meta 要求](https://developers.facebook.com/docs/app-ads/meta-install-referrer#step-1--add-the-meta-apps)的`<queries id="sl-md0000000">`元素。您无需将这些元素添加至`AndroidManifest.xml`。
</Callout> <minorversion added="v4.37.0"> 

Adjust SDK v4\.37\.0 及更高版本支持[Meta Install Referrer](https://developers.facebook.com/docs/app-ads/meta-install-referrer)。要启用该功能：
</MinorVersion> 

1. 在[应用控制面板](https://developers.facebook.com/apps)中找到您的 Meta app ID。更多信息，请参考 Meta 的[应用控制面板文档](https://developers.facebook.com/docs/development/create-an-app/app-dashboard)。

2. 将应用 ID 作为 `string` 参数传递至 `AdjustConfig.setFbAppId` 方法。

   ```jsx
   const adjustConfig = new AdjustConfig(
      "{YourAppToken}",
      AdjustConfig.EnvironmentSandbox,
   );
   //...
   adjustConfig.setFbAppId("<fb_app_id_string id="sl-md0000000">");
   //...
   Adjust.create(adjustConfig);
   ```

5\. 添加 iOS 框架\{\#add\-ios\-frameworks\}
---------------------------------------------

在应用中添加特定 iOS 框架后，Adjust SDK 就能获取额外信息。这些框架可以支持特定 SDK 功能，但即便没有这些框架，SDK 也能正常工作。您可以添加这些框架，然后在 **Project Settings \->  Build Phases \->  Link Binary With Libraries** 下将其设置为可选。

|                  框架                   |                                       描述                                       |                 注意事项                  |
|---------------------------------------|--------------------------------------------------------------------------------|---------------------------------------|
| **AdSupport.framework**               | 如果您希望 SDK 能访问 IDFA 值和 \(iOS 14 以前的\) LAT 信息，请添加该框架。                          | 如果您的应用属于 "儿童" \(Kids\) 类别，请不要安装该框架。 |
| **AdServices.framework**              | 该框架对于处理 Apple Search Ads 是必要的。                                                 |                                       |
| **StoreKit.framework**                | 如果您希望访问 SKAdNetwork 框架，同时让 Adjust SDK 在 iOS 14 或未来版本的 iOS 中自动处理与该框架的通讯，请添加该框架。 |                                       |
| **AppTrackingTransparency.framework** | 如果您希望 SDK 能在 iOS 14 或未来版本的 iOS 中包装用户的 ATT 许可对话框，并访问用户的许可响应，请添加该框架。             | 如果您的应用属于 "儿童" \(Kids\) 类别，请不要安装该框架。 |

6\. 添加 Adjust SDK 签名\{\#add\-the\-adjust\-sdk\-signature\}
------------------------------------------------------------------

Adjust SDK 签名可以用来签署 Adjust SDK 发送的所有通讯。这样，Adjust 的服务器就能轻松甄别、拒绝任何非法安装活动。

要开始使用 Adjust SDK 签名，请联系您的技术客户经理，或发送邮件至 [support@adjust.com](mailto:support@adjust.com)。

7\. 测试集成\{\#test\-your\-integration\}
-------------------------------------------

采用 Adjust SDK 提供的工具，您可以测试并排除集成出现的问题。要测试集成，请按照下列步骤操作：

* 将您的环境设为 `AdjustConfig.EnvironmentSandbox`
* 在 Adjust 控制面板结果中添加 [sandbox 过滤器](https://help.adjust.com/en/article/filter-data#sandbox)。
* 将日志级别设为 `AdjustConfig.LogLevelVerbose`。

<callout type="tip"> 

如果遇到任何问题，请发送邮件至 [support@adjust.com](mailto:support@adjust.com)，并在邮件中说明所有详情和日志。
</Callout> 

### 测试 Google Play 服务集成\{\#test\-google\-play\-services\-integration\}

要测试 Adjust SDK 能否接收设备的 Google 广告 ID，请将日志级别设为 `AdjustConfig.LogLevelVerbose`，环境设为 `AdjustConfig.EnvironmentSandbox`。启动应用，记录一次会话或事件。如果 SDK 读取了广告 ID，就会记录 `gps_adid` 参数。

如果您在获取 Google 广告 ID 时遇到任何问题，请在 SDK [GitHub 库](https://github.com/adjust/react_native_sdk)中提问，或联系 [support@adjust.com](mailto:support@adjust.com)。

