src/content/docs/zh/sdk/react-native/v5/index.mdx
---
title: React Native SDK 集成指南
description: 使用 React Native SDK 在 React Native 应用中使用 Adjust 功能
category-title: React Native SDK
slug: zh/sdk/react-native
sidebar-position: 4
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /zh/sdk/react-native/v4
---

通过 Adjust React Native SDK，您可以在自己的 React Native 应用中监测归因、事件及更多数据。请按照本指南中说明的步骤操作，在应用内设置 Adjust SDK。您还可以在 [GitHub](https://github.com/adjust/react_native_sdk/tree/master/example) 上查看示例应用。

<Callout type="important">

Adjust SDK 支持 iOS 12 或更新版本，以及安卓 API 级别 21 \(Lollipop\) 或更新版本。

</Callout>

## 1\. 添加 SDK 至您的项目{#add-the-sdk-to-your-project}

要在您的 React Native 应用中使用 Adjust SDK，请先将 SDK 加入项目。请按以下步骤添加：

1. 使用以下方法之一下载 React Native 库。

```console
$ npm install react-native-adjust@$REACT_NATIVE_V5_VERSION --save
```

2. 在您的终端运行以下指令来为您的 iOS 应用安装 CocoaPods 依赖：

```console
$ cd ios && pod install
```

## 2\. 集成 SDK{#integrate-the-sdk}

要将 SDK 集成进项目，您必须先将 Adjust 的 SDK 配置导入主要应用 Javascript 文件。

在应用的`.js`文件开始处加入以下行：

```js
import { Adjust, AdjustConfig } from "react-native-adjust";
```

## 3\. 初始化 Adjust SDK{#initialize-the-adjust-sdk}

请确保在 React Native 应用中尽快初始化 Adjust SDK。要进行 SDK 初始化，请使用应用识别码及您希望应用程序运行的环境来初始化 config 对象。 向应用的`.js`文件中加入以下代码行：

```js
constructor(props) {
   super(props);
   const adjustConfig = new AdjustConfig("{YourAppToken}", AdjustConfig.EnvironmentSandbox);
   Adjust.initSdk(adjustConfig);
}

componentWillUnmount() {
   Adjust.componentWillUnmount();
}
```

传递`AdjustConfig`参数：

-  用您的识别码替换 `{YourAppToken}` 。请查看[应用设置](https://help.adjust.com/zh/article/app-settings#view-your-app-token)，了解查找识别码的办法。
-  选择您的环境：
   -  如要测试应用并发送测试数据，请使用`AdjustConfig.EnvironmentSandbox`。请在控制面板中启用 [sandbox 模式](https://help.adjust.com/zh/article/filter-data#sandbox)，查看测试数据。
   -  如果您已经完成测试，准备发布应用，请使用`AdjustConfig.EnvironmentProduction`。

<Callout type="important">

在进行测试时，请确保将环境设置为 `AdjustEnvironment.sandbox`。请在向应用商店提交应用前将此设为 `AdjustEnvironment.production`。

</Callout>

## 4\. 设置安卓设备{#set-up-android-devices}

### 添加权限{#add-permissions}

Adjust SDK 需要特定权限来访问信息。

-  `INTERNET`: 自动添加至 Adjust 安卓 SDK。您无需手动添加。

您也可以添加可选权限，获得更多信息。

-  `ACCESS_NETWORK_STATE` \(可选\) 您可以将其添加至`AndroidManifest.xml`文件以读取可能对您有用的某些参数。

<CodeBlock title="AndroidManifest.xml">

```xml
<uses-permission android:name="android.permission.INTERNET"/>
<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
```

</CodeBlock>

从 Adjust SDK 4\.32\.0 及以上版本默认包含 `com.google.android.gms.AD_ID` 权限。如果您的应用需要符合 COPPA 的要求或不针对 Google Play 商店，则可以通过添加 `remove` 指令将其删除。

<CodeBlock title="AndroidManifest.xml">

```xml
<uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
```

</CodeBlock>
<Callout type="seealso">

请查看 [Google 的 `AdvertisingIdClient.Info`](https://developers.google.com/android/reference/com/google/android/gms/ads/identifier/AdvertisingIdClient.Info#public-string-getid) 文档，了解更多与该许可相关的信息。

</Callout>

### 添加 Google Play 服务{#add-google-play-services}

定向 Google Play 商店的应用必须使用 [Google 广告 ID](https://support.google.com/googleplay/android-developer/answer/6048248?hl=en) \(`gps_adid`\) 来识别设备。为此，请将以下 dependency 加入`build.gradle` 文件的 `dependencies` 部分。

<CodeBlock title="build.gradle">

```groovy
implementation 'com.google.android.gms:play-services-ads-identifier:18.1.0'
```

</CodeBlock>
<Callout type="note">

Adjust SDK 并不与任何版本的 `play-services-ads-identifier`依赖绑定。您可以使用任意版本的 Google Play 服务库。

</Callout>

### 设置 Install Referrer{#set-up-install-referrer}

Install Referrer 是一种归因机制，可用来将应用安装归因至来源。包含两部分：

-  [x] 来自这些应用商店的一系列 API，开发者借此可在应用中调取 referral 内容。
-  [x] Google Play 和华为 App Gallery 等应用商店在其商店网站应用页面 URL 中接受的 `referrer` 参数。referrer 参数按以下方式填充：
   -  用户点击 Adjust 链接时，Adjust 服务器发送一个独一无二的识别码，即 `reftag`。该识别码被指配给此点击，并被添加至 referrer 参数。要进一步了解 reftag，请访问[Reftag](https://help.adjust.com/zh/article/reftag) 页面。
   -  您在开展 [Google Ads](https://support.google.com/google-ads/answer/6357635?hl=en) 推广活动时，Google 会传递一个叫做 `gclid` 的唯一识别码至 referrer 参数。您必须在 Google Ads 账户中开启 **Auto\-tagging** 。

<Callout type="note">

虽然 install referrer 不是必要的，但我们强烈建议添加以提高归因准确度。

</Callout>

#### Google Play Referrer API{#google-play-referrer-api}

要支持 [Google Play Referrer API](https://developer.android.com/google/play/installreferrer)：

1. 请在您的最高层级`build.gradle`文件的 **依赖区块** 中添加以下行：

<CodeBlock title="build.gradle">

```groovy
dependencies {
//...
implementation 'com.android.installreferrer:installreferrer:2.2'
//...
}

```

</CodeBlock>

2. `installreferrer`库是 **Google Maven** 库的一部分。您需要将 Google Maven 库添加到应用的最高层级`build.gradle`文件来构建应用：

<CodeBlock title="build.gradle">

```groovy
allprojects {
   repositories {
      maven {
         url "https://maven.google.com"
      }
   }
}


```

</CodeBlock>

#### Meta referrer 集成{#meta-referrer-integration}

通过 Adjust Meta Install Referrer 插件，Adjust SDK 可以支持 [Meta Install Referrer](https://developers.facebook.com/docs/app-ads/meta-install-referrer)。[要了解集成细节，请参考 React Native Meta 安装 Referrer 插件。](/zh/sdk/react-native/plugins/meta-referrer-plugin)

## 5\. 添加 iOS 框架{#add-ios-frameworks}

在应用中添加特定 iOS 框架后，Adjust SDK 就能获取额外信息。这些框架可以支持特定 SDK 功能，但即便没有这些框架，SDK 也能正常工作。您可以添加这些框架，然后在 **Project Settings \-\-> Build Phases \-\-> Link Binary With Libraries** 下将其设置为 **可选** 。

| 框架                                  | 描述                                                                                                                   | 注意事项                                                  |
| ------------------------------------- | ---------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------- |
| **AdSupport.framework**               | 如果您希望 SDK 能访问 IDFA 值和 \(iOS 14 以前的\) LAT 信息，请添加该框架。                                             | 如果您的应用属于 "儿童" \(Kids\) 类别，请不要安装该框架。 |
| **AdServices.framework**              | 该框架对于处理 Apple Search Ads 是必要的。                                                                             |                                                           |
| **StoreKit.framework**                | 如果您希望访问 SKAdNetwork 框架，同时让 Adjust SDK 在 iOS 14 或未来版本的 iOS 中自动处理与该框架的通讯，请添加该框架。 |                                                           |
| **AppTrackingTransparency.framework** | 如果您希望 SDK 能在 iOS 14 或未来版本的 iOS 中包装用户的 ATT 许可对话框，并访问用户的许可响应，请添加该框架。          | 如果您的应用属于 "儿童" \(Kids\) 类别，请不要安装该框架。 |

## 6\. 设置 SDK 签名{#set-up-sdk-signature}

SDK v5 包含 [SDK 签名库](https://help.adjust.com/zh/article/sdk-signature)。请按照[iOS](/zh/sdk/ios/integrations/signature-library#test-your-app)和[安卓](/zh/sdk/android/integrations/signature-library#test-your-app)测试指南操作，确保集成正确运行。

签名保护功能默认处于禁用状态。要启用该功能，您需要：

1. [执行签名验证](https://help.adjust.com/zh/article/sdk-signature#enforce-signature-validation)。
2. 在测试前[提供应用的 SHA\-1 指纹](https://help.adjust.com/zh/article/sdk-signature#manage-your-certificate-fingerprints)。

## 7\. 测试集成{#test-your-integration}

采用 Adjust SDK 提供的工具，您可以测试并排除集成出现的问题。要测试集成，请按照下列步骤操作：

-  将您的环境设为 `AdjustConfig.EnvironmentSandbox`
-  在 Adjust 控制面板结果中添加 [sandbox 过滤器](https://help.adjust.com/zh/article/filter-data#sandbox)。
-  将日志级别设为 `AdjustConfig.LogLevelVerbose`。

<Callout type="tip">

如果遇到任何问题，请发送邮件至 [support@adjust.com](mailto:support@adjust.com)，并在邮件中说明所有详情和日志。

</Callout>

### 测试 Google Play 服务集成{#test-google-play-services-integration}

要测试 Adjust SDK 能否接收设备的 Google 广告 ID，请将日志级别设为 `AdjustConfig.LogLevelVerbose`，环境设为 `AdjustConfig.EnvironmentSandbox`。启动应用，记录一次会话或事件。如果 SDK 读取了广告 ID，就会记录 `gps_adid` 参数。

如果您在获取 Google 广告 ID 时遇到任何问题，请在 SDK [GitHub 库](https://github.com/adjust/react_native_sdk)中提问，或联系 [support@adjust.com](mailto:support@adjust.com)。
